<resources>
    <string name="app_name">Movies Database</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="top_rated_movies">Most Viewed Movies</string>
    <string name="favorite_movies">Favorite Movies</string>

    <string name="original_title">Original Title</string>
    <string name="synopsis">Synopsis</string>
    <string name="user_rating">User Rating</string>
    <string name="release_date">Release Date</string>
    <string name="favorite">Favorite</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="share">Share</string>

    <string name="action_most_popular">Most Popular</string>
    <string name="action_top_rated">Most Viewed</string>
    <string name="action_upcoming">Upcoming</string>
    <string name="action_favorites">Favorites</string>

    <string name="unknownError">Unknown Error</string>
    <string name="no_trailers_available">No Trailers Available!</string>
    <string name="no_reviews_available">No Reviews Available!</string>
    <string name="no_synopsis_available">No Synopsis Available!</string>
    <string name="no_favorite_movies">No Favorite Movies!</string>
</resources>
